Added App: Gallery, Created base template and added an extended Landing page template, configured settings.py and lastly configured urls.py in /core and added a urls.py in Gallery

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,4 +14,8 @@
     {% block content %}
 	{% endblock %}
   </body>
+  
+  <script>
+	<!-- Parallax/Gallery intereaction goes here. -->
+  </script>
 </html>
