--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <!-- CSS -->
 	<link type="text/css" src="{% static 'css/main.css' %}">
 	<!-- JS -->
-	<script type="text/javascript" src="{% satic 'js/backend-js.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/backend-js.js' %}"></script>
 	<!-- Optional Boostrap -->
 	
   </head>
